<?xml version="1.0"?>
<package>
  <name>ros_tutorials_topic</name>
  <version>0.1.0</version>
  <description>The ros_tutorials_topic package</description>
  <license>Apache license 2.0</license>
  <author email="junghwanyim@todo.todo">junghwanyim</author>
  <maintainer email="junghwanyim@todo.todo">junghwanyim</maintainer>
  <url type="bugtracker">http://www.robotics.com</url>
  <url type="repository">http://www.robotics.com</url>
  <url type="website">http://www.robotics.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export></export>
</package>